feat implement medicine crud
